tests/pos/simple/64-upcast.ts
/*@ foo :: () => {v: number + string | 0 < 1} */
function foo(){
  return 4;
}
