tests/neg/todo/simple/overload-00.ts

/*@ foo :: (x: number + string) => { boolean | 0 < 1} */
function foo(x: any): boolean  {

  return 1 < x;

}
